# india-local-government-directory

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
data/: lgd_districts.parquet  lgd_states.parquet  lgd_subdistricts.parquet  lgd_villages.metadata.json
scripts/: build_derived_tables.py  lgd_directory.py
src/india_lgd/: lgd_directory.py
